--- a/catalog/static/styles.css
+++ b/catalog/static/styles.css
@@ -186,10 +186,13 @@ a {
 	font-size: 16px;
 	margin-top: 20px;
 }
-.form-group text {
+.form-group input {
 	font-size: 16px;
 }
 .form-group textarea {
+	font-size: 16px;
+}
+.form-group select {
 	font-size: 16px;
 }
 
