Remove non-alphanumeric characters when using category name and item title as part of the URL

--- a/catalog/templates/category/edititem.html
+++ b/catalog/templates/category/edititem.html
@@ -17,7 +17,7 @@
             </div>
             <div class="categoryitem-actions">
                 <button type="submit" class="btn-action left" id="submit">Save</button>
-                <a href="{{url_for('showCategoryItem', category_name = selectedCategoryItem.category.name, item_title = selectedCategoryItem.title, item_id = selectedCategoryItem.id)}}">
+                <a href="{{url_for('showCategoryItem', category_name = selectedCategoryItem.category.urlname, item_title = selectedCategoryItem.urltitle, item_id = selectedCategoryItem.id)}}">
                     <span class="btn-action right" style="margin-top:5px;">Cancel</span>
                 </a>
             </div>
