--- a/catalog/templates/category/categorylist.html
+++ b/catalog/templates/category/categorylist.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="content-panel">
 		{% for category in categories %}
-		<a href="{{url_for('showCategoryItems', category_name = category.name, category_id = category.id)}}">
+		<a href="{{url_for('showCategoryItems', category_name = category.urlname, category_id = category.id)}}">
 			{% if selectedCategory and category.id == selectedCategory.id %}
 			<div class="category-list selected">
 				<h3>{{category.name}}</h3>
