--- a/catalog/templates/category/latestlist.html
+++ b/catalog/templates/category/latestlist.html
@@ -12,7 +12,7 @@
     </div>
     <div class="content-panel">
         {% for item in latestItems %}
-        <a href="{{url_for('showCategoryItem', category_name = item.category.name, item_title = item.title, item_id = item.id)}}">
+        <a href="{{url_for('showCategoryItem', category_name = item.category.urlname, item_title = item.urltitle, item_id = item.id)}}">
             <div class="latest-list">
                 <h3>{{item.title}} <i>({{item.category.name}})</i></h3>
             </div>
