--- a/catalog/templates/header.html
+++ b/catalog/templates/header.html
@@ -18,7 +18,7 @@
 			<img src="/static/blank_user.gif" class="user-img">
 			{% endif %}
 
-			<a href={{url_for('showLogout')}} class="btn btn-info btn-lg btn-login">
+			<a href={{url_for('logout')}} class="btn btn-info btn-lg btn-login">
 				<span class="glyphicon glyphicon-log-out"></span>Logout
 			</a>
 			{% endif %}
