--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% include "header.html" %}
-<div class="row catalog">
+<div class="catalog">
 	{% include leftPanel %} {% include rightPanel %}
 </div>
 
