--- a/catalog/templates/category/item.html
+++ b/catalog/templates/category/item.html
@@ -1,9 +1,10 @@
-<div class="col-md-8 categoryitem-panel">
+<div class="col-xs-8 categoryitem-panel">
     <div class="row catalog-title">
         <h2>{{selectedCategoryItem.title}}</h2>
     </div>
+    
     <div class="content-panel">
-        <div class="row categoryitem">
+        <div class="categoryitem">
             <h3>Description: {{selectedCategoryItem.description}}</h3>
         </div>
         {%if 'username' in session and session['user_id'] == selectedCategoryItem.user_id %}
