--- a/catalog/templates/category/deleteitem.html
+++ b/catalog/templates/category/deleteitem.html
@@ -1,12 +1,11 @@
-<div class="col-md-8 categoryitem-panel">
+<div class="col-xs-8 categoryitem-panel">
     <div class="row catalog-title">
-        <div class="row catalog-title">
-            <h2>Delete {{selectedCategoryItem.title}}</h2>
-        </div>
+        <h2>Delete {{selectedCategoryItem.title}}</h2>
     </div>
+    
     <div class="content-panel">
         <form action="#" method='post'>
-            <div class="row categoryitem">
+            <div class="categoryitem">
                 <h3>Are you sure you want to delete {{selectedCategoryItem.title}}?</h3>
             </div>
             <div class="categoryitem-actions">
