--- a/catalog/templates/category/newitem.html
+++ b/catalog/templates/category/newitem.html
@@ -1,4 +1,4 @@
-<div class="col-md-8 categoryitem-panel">
+<div class="col-xs-8 categoryitem-panel">
     <div class="row catalog-title">
         {% if selectedCategory %}
         <h2>Add New {{selectedCategory.name}} Item</h2>
@@ -6,9 +6,10 @@
         <h2>Add New Catalog Item</h2>
         {% endif %}
     </div>
+
     <div class="content-panel">
         <form action="#" method="post">
-            <div class="row categoryitem">
+            <div class="categoryitem">
                 <div class="form-group">
                     <label for="title">Title:</label>
                     <input type="text" maxlength="80" class="form-control" name="title" placeholder="Title of the item" required>
@@ -17,16 +18,12 @@
                     <textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the item" required></textarea>
 
                     <label for="category">Category:</label>
-                    
-                    {% if selectedCategory %}
-                    <select class="form-control" name="category" disabled>
-                        <option value="{{selectedCategory.id}}">{{selectedCategory.name}}</option>
-                    {% else %}
                     <select class="form-control" name="category">
-                        {% for category in categories %}
+                        {% if selectedCategory %}
+                        <option value="{{selectedCategory.id}}">{{selectedCategory.name}}</option>
+                        {% else %} {% for category in categories %}
                         <option value="{{category.id}}">{{category.name}}</option>
-                        {% endfor %}
-                    {% endif %}
+                        {% endfor %} {% endif %}
                     </select>
                 </div>
             </div>
@@ -34,11 +31,11 @@
                 <button type="submit" class="btn-action left" id="submit">Add</button>
                 {% if selectedCategory %}
                 <a href="{{url_for('showCategoryItems', category_name = selectedCategory.urlname, category_id = selectedCategory.id)}}">
-                {% else %}
-                <a href="{{url_for('showCategories')}}">
-                {% endif %}
-                    <span class="btn-action right" style="margin-top:5px;">Cancel</span>
-                </a>
+                    {% else %}
+                    <a href="{{url_for('showCategories')}}">
+                        {% endif %}
+                        <span class="btn-action right" style="margin-top:5px;">Cancel</span>
+                    </a>
             </div>
         </form>
     </div>
