--- a/catalog/templates/header.html
+++ b/catalog/templates/header.html
@@ -1,10 +1,10 @@
-<div class="row top-menu">
-	<div class="col-sm-6" style="margin-top:5px;">
+<div class="top-menu">
+	<div class="col-xs-6" style="margin-top:5px;">
 		<a style="font-size:24px;color:#42c3c9" href="{{url_for('showCategories')}}">
 			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 		</a>
 	</div>
-	<div class="col-sm-6 text-right">
+	<div class="col-xs-6 text-right">
 		<p>
 			{%if 'username' not in session %}
 			<button type="button" class="btn btn-info btn-lg btn-login" data-toggle="modal" data-target="#loginModal">
