--- a/catalog/templates/loginmodal.html
+++ b/catalog/templates/loginmodal.html
@@ -18,7 +18,7 @@
                     <div id="result"></div>
 
                     <!-- GOOGLE SIGN IN -->
-                    <div class="row login-tile">
+                    <div id="googleLogin" class="row login-tile">
                         <span class="col-xs-7 title">Continue with Google</span>
                         <div class="col-xs-5 google-btn">
                             <button class="g-signin2" id="signinButton">Sign in with Google</button>
@@ -129,7 +129,7 @@
                             });
                         }
                     </script>
-                    <div class="row login-tile">
+                    <div id="facebookLogin" class="row login-tile">
                         <span class="col-xs-7 title">Continue with Facebook</span>
                         <div class="col-xs-5 facebook-btn">
                             <button>
