--- a/catalog/templates/header.html
+++ b/catalog/templates/header.html
@@ -3,6 +3,9 @@
 		<a style="font-size:24px;color:#42c3c9" href="{{url_for('showCategories')}}">
 			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 		</a>
+		<a style="font-size:24px;color:#42c3c9" href="{{url_for('catalogJSON')}}">
+			<img src="/static/json_endpoint.png" class="json-img">
+		</a>
 	</div>
 	<div class="col-xs-6 text-right">
 		<p>
